--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "REACT_APP_API_URL=http://localhost:5000/api react-scripts start",
     "dev": "DEBUG=express-generator:* nodemon ./bin/www",
     "dev-windows": "nodemon ./bin/www"
   },
