--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,15 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-select-v2": "^2.4.2",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "REACT_APP_API_URL=http://localhost:5000/api react-scripts start",
