--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@nivo/bar": "^0.62.0",
+    "@nivo/circle-packing": "^0.62.0",
+    "@nivo/line": "^0.62.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "http-proxy-middleware": "^1.0.6",
     "jquery": "^3.5.1",
     "nivo": "^0.31.0",
     "popper.js": "^1.16.1",
@@ -26,7 +29,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://18.157.253.218:3000",
   "eslintConfig": {
     "extends": "react-app"
   },
