--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@nivo/bar": "^0.62.0",
     "@nivo/circle-packing": "^0.62.0",
     "@nivo/line": "^0.62.0",
+    "@nivo/pie": "^0.62.0",
+    "@nivo/treemap": "^0.62.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
